# intercesting_triangles_3d

./: CMakeLists.txt  algorithm.cpp  main.cpp
include/: main.hpp  triangle_geometry.hpp
tests/: test_main.cpp
